# my_project

./: .gitignore  CLAUDE.md  MEMORY.md  README.md  template_instruction.md
.claude/: settings.json
.claude/agents/: domain-reviewer.md  orchestrator.md  proofreader.md  python-reviewer.md  reviewer-proof.md  reviewer-python.md  verifier.md
.claude/hooks/: compact-pre.py  context-monitor.py  files-protection.py  latex-cleanup.py  log-reminder.py  log_reminder.py  notify.py  post-compact-restore.py  pre-compact.py  pre-compact.sh  protect-files.sh  reminder-log.py  reminder-verify.py  verify-reminder.py
.claude/rules/: conventions.md  exploration-fast-track.md  exploration-lifecycle.md  meta-governance.md  orchestrator-protocol.md  orchestrator-research.md  plan-first-workflow.md  project-conventions.md  proofread-manuscript.md  protocol-orchestrator.md  protocol-verification.md  quality-gates.md  review-domain.md  review-python.md  session-logging.md  standalone-conventions.md  standalone-latex-compile.md  standalone-log-session.md  standalone-pdf.md  standalone-quality.md  verification-protocol.md  verify-latex.md  verify-python.md  workflow-exploration.md  workflow-plan.md  workflow-quick-ref.md  workflow-start.md
.claude/skills/analyze-data/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/compile-latex/: SKILL.md
.claude/skills/data-analysis/: SKILL.md
.claude/skills/devils-advocate/: SKILL.md
.claude/skills/interview-me/: SKILL.md
.claude/skills/learn/: SKILL.md
code/: pyproject.toml
code/src/mypackage/: config.py
docs/quality_reports/: quality_score.py
docs/templates/: domain-reviewer.md
paper/: .latexmkrc  main.tex
paper/appendices/: A-proofs.tex  B-extensions.tex
paper/sections/: 01-introduction.tex  02-next-section.tex
(+85 files in other folders)
